Creacion de modulo de prendas y de cloudinary

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,24 @@
+# Server
+PORT=3000
+NODE_ENV=development
+ALLOWED_ORIGINS=http://localhost:19006
+
+# Database
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=admin
 DB_NAME=quemepongo
 
-URL=http://localhost:3000
+# Auth
 JWT_SECRET=supersecret
+JWT_EXPIRES_IN=1d
+
+URL=http://localhost:3000
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=quemepongo
+CLOUDINARY_API_KEY=461321222652271
+CLOUDINARY_API_SECRET=0TJwbWfJ4yRq6HiUHtjuN5M5q6o
+
+
