creacion de recomendaciones

--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed": "ts-node src/seeds/seed.ts",
     "prestart:prod": "npm run build",
-    "deploy": "npm run prestart:prod && npm run start:prod"
+    "deploy": "npm run prestart:prod && npm run start:prod",
+    "db:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync -d src/config/data-source.ts",
+    "db:drop": "ts-node ./node_modules/typeorm/cli.js schema:drop -d src/config/data-source.ts",
+    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -d src/config/data-source.ts",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d src/config/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/data-source.ts",
+    "schema:sync": "typeorm-ts-node-commonjs schema:sync -d src/config/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/config/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
